tests/baselines/reference/parserFunctionDeclaration2.d.errors.txt
==== tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration2.d.ts (2 errors) ====
    function F() {
    ~~~~~~~~
!!! error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
                 ~
!!! error TS1037: A function implementation cannot be declared in an ambient context.
    }